tests/fixtures/invalid/dict_with_args.py
# Test dict() builtin with arguments
# Should fail: dict() takes no arguments

d: dict[int, int] = dict(1)
